2013-05-23 Miguel de Dios <miguel.dedios@artica.es>

	* include/javascript/pandora_visual_console.js,
	include/functions_visual_map.php: fixed to show the lines between
	the items in the visualmap into a dashboard.
	
	Fixes: #2232
	
	MERGED FROM THE BRANCH 4

2013-05-21  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_netflow.php: Added support for multiple netflow
	  directories.

2013-05-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/styles/pandora_minimal.css
	include/styles/dialog.css
	include/styles/menu.css
	include/styles/jquery-ui-1.10.0.custom.css
	include/functions_events.php
	operation/events/events_list.php
	include/functions_snmp_browser.php
	include/styles/pandora.css: A lot of graphic
	changes including events form and snmp browser
	layout

	* include/ajax/module.php
	include/functions_ui.php
	include/functions.php
	include/functions_agents.php
	include/functions_graph.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php
	include/functions_reporting.php
	include/functions_filemanager.php
	include/javascript/pandora_snmp_browser.js
	include/functions_treeview.php
	include/constants.php
	index.php
	extensions/net_tools.php
	extensions/pandora_logs.php
	extensions/ssh_gateway.php
	extensions/update_manager/settings.php
	extensions/plugin_registration.php
	operation/incidents/incident.php
	operation/incidents/incident_detail.php
	operation/visual_console/render_view.php
	operation/users/user_edit.php
	operation/reporting/reporting_viewer.php
	operation/reporting/graph_viewer.php
	operation/agentes/datos_agente.php
	operation/agentes/alerts_status.php
	operation/agentes/estado_generalagente.php
	operation/agentes/custom_fields.php
	operation/agentes/estado_agente.php
	operation/agentes/estado_monitores.php
	operation/agentes/agent_fields.php
	operation/agentes/stat_win.php
	operation/servers/recon_view.php
	operation/integria_incidents/incident_detail.php
	operation/netflow/nf_live_view.php