@@ -1,3 +1,8 @@
+2013-05-24  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/functions.php: Merged from 4.0 branch. Removed calls
+	  to PHP's SNMP functions.
+
 2013-05-23 Miguel de Dios <miguel.dedios@artica.es>
 
 	* include/javascript/pandora_visual_console.js,
